--- a/public/index.html
+++ b/public/index.html
@@ -60,11 +60,17 @@
                     </div>
                     <div id="api_html" style="display:none;">
                         <h2>API Documentation</h2>
-                        <p>Add your basic HTML for Exercise 2 here</p>
+                        <a href="https://docs.google.com/document/d/1Swm9zctT0yKw7mhOxfjtyduKwT33--NQSzzuqTgL_rM/edit?usp=sharing" target="_blank">Open doc in new window</a>
                     </div>
                     <div id="about_html" style="display:none;">
                         <h2>About</h2>
-                        <p>Add your basic HTML for Exercise 2 here</p>
+                        <p>API Developed by Johan, Kasper, Alex</p>
+                        <p>Frontend by Johan</p>
+                        <a href="https://github.com/Capa2/CA1A2" target="_blank">API source code (github)</a>
+                        <a href="https://github.com/Capa2/CA1A2F" target="_blank">Frontend source code (github)</a>
+                        <a href="https://github.com/Capa2/CA1A2/blob/main/.github/workflows/mavenworkflow.yml" target="_blank">CI workflow (github)</a>
+                        <a href="https://trello.com/invite/b/TIwt5W1o/e43cd522f32c29204b267d39984d2b32/ca1a2" target="_blank">Trello Kanban</a>
+                        <a href="https://docs.google.com/document/d/1jQYHW_UXWxAltn6ux5WLOF6fSHPRJ6dWxFe_MXAjToo/edit?usp=sharing" target="_blank">Dev Diary</a>
                     </div>
                 </div>
             </div>
